# wasm-agents-blueprint

./: CONTRIBUTING.md  README.md  handoff.html  ollama.html  pyproject.toml  wasm_agent.html
demos/: config.js  handoff_demo.html  hello_agent.html  local_model.html  ollama_local.html  tool_calling.html
docs/: customization.md  getting-started.md  index.md
